fix customer color and add more env vars

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 ASSC_PSD_URL="someURL/where/psd/is/hosted"
 FIREFOX_PROFILE="/home/<user>/.mozilla/firefox/<user>.default"
 GECKODRIVER_LOC="home/<user>/Desktop/ASSC/geckodriver"
+
+AWS_ACCESS=
+AWS_SECRET=
