change gui coords to env vars

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,26 @@
+# URL to publicly available PSD of ASSC Logo
 ASSC_PSD_URL="someURL/where/psd/is/hosted"
+
+# Local path to firefox profile. Should have already loaded font into photopea
+# as well as closed modal
 FIREFOX_PROFILE="/home/<user>/.mozilla/firefox/<user>.default"
 GECKODRIVER_LOC="home/<user>/Desktop/ASSC/geckodriver"
 
+# Pyautogui X and Y coords of the filename in photopea after loading
+PEA_FILENAME_X=
+PEA_FILENAME_Y=
+
+# Pyautogui when saving file the X and Y Coords
+SAVE_FILE_X=
+SAVE_FILE_Y=
+
+# Social Placeholder text X & Y
+SOCAL_TAG_1_X=
+SOCAL_TAG_1_Y=
+
+SOCAL_TAG_2_X=
+SOCAL_TAG_2_Y=
+
+# AWS ACCESS KEYS FOR BOTO3
 AWS_ACCESS=
 AWS_SECRET=
