add example files and order implement s3 aws wokflow for processing orders

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,10 @@ SOCAL_TAG_2_Y=
 # AWS ACCESS KEYS FOR BOTO3
 AWS_ACCESS=
 AWS_SECRET=
+
+# S3 Bucket that contains requests/processed/results
+S3_BUCKET_NAME=
+
+# Local storage path where results of the logo generation will go
+# this is likely the Downloads folder
+LOCAL_IMAGE_STORAGE_PATH='/Users/threeinitiates/Documents/anti-social-generator'
